--- a/css/plans.css
+++ b/css/plans.css
@@ -86,11 +86,15 @@
 
 .plans-item-info li {
     font-size: 1.6rem;
-    padding-left: 2rem; 
-    background-image: url('../images/svg/arrow-right.svg'); 
-    background-size: 1.6rem 1.6rem; 
-    background-repeat: no-repeat;
-    background-position: 0 50%;
+    display: flex;
+    align-items: flex-end;
+}
+
+.plans-item-info li svg {
+    height: 100%;
+    margin-right: .6rem;
+    position: relative;
+    bottom: -2px;
 }
 
 .plans-item-link {
